syntax = "proto3";

package auth;


service AuthUsers {
    rpc validateUser(ValidateUserDto ) returns (User);
    rpc validateToken(ValidateTokenDto) returns (User) ;

    // user settings
    rpc getUserSetting(GetUserSettingsDTO) returns (Settings);
    rpc createUser(CreateUserDTO) returns (User);
    rpc getAllUsers (Empty) returns (Users);


    // seen functionality 
    rpc setSeen(SeenObject) returns (Success);
    rpc notSeen(NotSeenDto) returns (SeenObjects);

}


message NotSeenDto{
  bool seen =1 ;
  string userID = 2;
}




message SeenObject{
  string snapID  = 1;
  string userID = 2;
}

message SeenObjects{
  repeated SeenObject seen = 1;
}


message Success{
  bool success = 1;
}

message Users {
  repeated User users=1;
}
message Empty{
  
}

enum UserRole{
  ADMIN =0;
  USER = 1;
}

message CreateUserDTO{
  string password =1 ;
  string email = 2 ;
  string bio = 3;
  string firstName = 4; 
  string lastName = 5;
  UserRole role=6;
}


message Settings{
  string id =1;
  User user =2;
  int32 maxDistance=3;
  int32 newSnapDistance=4;
  int32 snapDisappearTime=5;

}
message GetUserSettingsDTO {
  string id=1;
}

message User{
  string Id = 1;
  string password = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string bio = 6;
  bool isActive = 7;
  string role = 8;
  string image = 9;

}

message ValidateUserDto{
    string email= 1;
    string password = 2;
}


message ValidateTokenDto{
  string token=1;
}